--- a/flexbox.html
+++ b/flexbox.html
@@ -11,6 +11,8 @@
         <div class="red">Red Box</div>
         <div class="yellow">Yellow Box</div>
         <div class="blue">Blue Box</div>
+        <div class="aqua">Aqua Box</div>
+        <div class="orange">Orange Box</div>
     </div>
 </body>
 </html>
