--- a/flexbox.html
+++ b/flexbox.html
@@ -13,6 +13,7 @@
         <div class="blue">Blue Box</div>
         <div class="aqua">Aqua Box</div>
         <div class="orange">Orange Box</div>
+        <div class="pink">Pink Box</div>
     </div>
 </body>
 </html>
